--- a/Prevu.Synoptics.V3085_Anviplas/P288.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P288.xaml
@@ -12,9 +12,9 @@
              x:Class="Prevu.Synoptics.P288" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas >
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="341" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="291-01-MA1" Canvas.Left="197" Canvas.Top="652"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Water" Width="394" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="293-01-MA1" Canvas.Left="632" Canvas.Top="652"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="242" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="283-01-MA1" Canvas.Left="512" Canvas.Top="467">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="341" RenderTransformOrigin="0.5,0.5"  StatusComponent="291-01-MA1" Canvas.Left="197" Canvas.Top="659"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="394" RenderTransformOrigin="0.5,0.5"  StatusComponent="293-01-MA1" Canvas.Left="632" Canvas.Top="659"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="244" RenderTransformOrigin="0.5,0.5"  StatusComponent="283-01-MA1" Canvas.Left="511" Canvas.Top="465" Icon="Right">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -67,10 +67,10 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="61" Color="Water" StatusComponent="283-01-MA1" VisibilityComponent="" Canvas.Left="632" Canvas.Top="354"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="61" Color="Water" StatusComponent="283-01-MA1" VisibilityComponent="" Canvas.Left="631" Canvas.Top="354"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="500" StatusComponent="298-01-MA1" Color="Water" Canvas.Left="702" Canvas.Top="152"/>
     <Machines:V01_PSP_Pit Canvas.Left="1114" Canvas.Top="340" Height="162" Width="227" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="298" StatusComponent="298-01-MA1" Color="Water" Canvas.Left="1051" Canvas.Top="300">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="298" StatusComponent="298-01-MA1" Color="Water" Canvas.Left="1051" Canvas.Top="289" Icon="Left">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
