--- a/Prevu.Synoptics.V3085_Anviplas/P450.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P450.xaml
@@ -56,9 +56,9 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="163" Color="Water" StatusComponent="444-01-MA1" VisibilityComponent="" Canvas.Left="561" Canvas.Top="315"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="135" Color="Water" StatusComponent="460-01-MA1" VisibilityComponent="" Canvas.Left="698" Canvas.Top="163"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="82" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" Canvas.Left="728" Canvas.Top="240"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="60" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="700" Canvas.Top="268">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="135" Color="Water" StatusComponent="460-01-MA1" VisibilityComponent="" Canvas.Left="698" Canvas.Top="97"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="82" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" Canvas.Left="728" Canvas.Top="174"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="120" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="670" Canvas.Top="232">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -68,7 +68,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="134" Color="Water" StatusComponent="460-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="633" Canvas.Top="228">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="204" Color="Water" StatusComponent="460-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="598" Canvas.Top="197">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -148,14 +148,14 @@
         </TransformGroup>
       </Machines:CV_Valve_001.RenderTransform>
     </Machines:CV_Valve_001>
-    <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
+    <Labels:JumpLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
             JumpFromLabel="444-01-MA1" 
-            JumpToLabel="470-01-MA1" Direction="Left" Canvas.Left="805" Canvas.Top="208"/>
-    <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
+            JumpToLabel="470-01-MA1" Direction="Left" Canvas.Left="805" Canvas.Top="142"/>
+    <Labels:JumpLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
             JumpFromLabel="444-01-MA1" 
-            JumpToLabel="460-01-MA1" Direction="Left" Canvas.Left="805" Canvas.Top="131"/>
+            JumpToLabel="460-01-MA1" Direction="Left" Canvas.Left="805" Canvas.Top="65"/>
     <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="453-01-MA1" 
@@ -187,7 +187,7 @@
             ComponentName="457-01-MA1" Canvas.Left="724" Canvas.Top="578"/>
     <Labels:DeviceLabel 
             ComponentName="450-21-CV1" Canvas.Left="239" Canvas.Top="452" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="100" Color="Water" StatusComponent="528-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1235" Canvas.Top="445" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="80" Color="Water" StatusComponent="528-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1256" Canvas.Top="477" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -197,9 +197,9 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="126" Color="Water" StatusComponent="529-01-MA1" Canvas.Left="1149" Canvas.Top="529" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="85" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" Canvas.Left="1064" Canvas.Top="522" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="200" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="966" Canvas.Top="423" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="126" Color="Water" StatusComponent="529-01-MA1" Canvas.Left="1160" Canvas.Top="551" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="85" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" Canvas.Left="1075" Canvas.Top="544" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="200" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="977" Canvas.Top="445" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -209,8 +209,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="102" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" Canvas.Left="1047" Canvas.Top="535" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="322" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="888" Canvas.Top="375" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="102" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" Canvas.Left="1058" Canvas.Top="557" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="308" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="906" Canvas.Top="404" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -220,9 +220,9 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="72" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" Canvas.Left="1064" Canvas.Top="324" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_VRC_WaterTank Canvas.Left="1255" Canvas.Top="462" Height="122" Width="121" ComponentName="528-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:CV_Valve_001 Color="Water" RenderTransformOrigin="0.5,0.5" Height="54" Width="58" Canvas.Left="1256" Canvas.Top="359" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Width="72" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" Canvas.Left="1075" Canvas.Top="346" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_VRC_WaterTank Canvas.Left="1266" Canvas.Top="484" Height="122" Width="121" ComponentName="528-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:CV_Valve_001 Color="Water" RenderTransformOrigin="0.5,0.5" Height="54" Width="58" Canvas.Left="1267" Canvas.Top="393" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Machines:CV_Valve_001.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -232,7 +232,7 @@
         </TransformGroup>
       </Machines:CV_Valve_001.RenderTransform>
     </Machines:CV_Valve_001>
-    <Machines:WaterPump Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1178" Canvas.Top="497" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Machines:WaterPump Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1189" Canvas.Top="519" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -242,19 +242,19 @@
         </TransformGroup>
       </Machines:WaterPump.RenderTransform>
     </Machines:WaterPump>
-    <Rectangle Height="27" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="1146" Canvas.Top="518" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Rectangle Height="27" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="1157" Canvas.Top="540" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel 
       JumpFromLabel="529-01-MA1" 
-      JumpToLabel="520-23-CV1" Canvas.Left="1098" Canvas.Top="290" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      JumpToLabel="520-23-CV1" Canvas.Left="1109" Canvas.Top="312" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-      ComponentName="528-41-LT1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1270" Canvas.Top="498" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="528-41-LT1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1281" Canvas.Top="520" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-      ComponentName="529-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1158" Canvas.Top="572" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="529-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1169" Canvas.Top="583" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-      ComponentName="528-21-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1305" Canvas.Top="363" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="72" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" Canvas.Left="1047" Canvas.Top="215" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="528-21-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1316" Canvas.Top="397" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="72" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" Canvas.Left="1058" Canvas.Top="251" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel 
       JumpFromLabel="529-01-MA1" 
-      JumpToLabel="510-23-CV1" Canvas.Left="1098" Canvas.Top="183" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      JumpToLabel="510-23-CV1" Canvas.Left="1109" Canvas.Top="219" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
