--- a/Prevu.Synoptics.V3168_Sirplaste/D810.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/D810.xaml
@@ -8,12 +8,12 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas Height="450" Width="320">
-        <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-41-WT1" SignalName="LSHA" Canvas.Left="201" Canvas.Top="48"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            ComponentName="810-41-WT1" Canvas.Left="201" Canvas.Top="171" VerticalAlignment="Top" RenderTransformOrigin="2.099,0.989"/>
-        <Labels:DeviceLabel 
-      ComponentName="810-01-MA1" Canvas.Left="33" Canvas.Top="39" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    </Canvas>
+  <Canvas Height="450" Width="320">
+    <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-41-WT1" SignalName="LSHA" Canvas.Left="29" Canvas.Top="36"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
+            ComponentName="810-41-WT1" Canvas.Left="201" Canvas.Top="165" VerticalAlignment="Top" RenderTransformOrigin="2.099,0.989"/>
+    <Labels:DeviceLabel 
+      ComponentName="810-01-MA1" Canvas.Left="201" Canvas.Top="81" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+  </Canvas>
 </UserControl>
