--- a/Prevu.Synoptics.V3168_Sirplaste/D873.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/D873.xaml
@@ -8,12 +8,12 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas Height="344" Width="368">
-        <Machines:V01_BBF_SingleBag Canvas.Left="10" Canvas.Top="10" Height="320" Width="343" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="873-62-BAG" SignalName="LSH" Canvas.Left="146" Canvas.Top="72"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-		VerticalAlignment="Top" 
+  <Canvas Height="344" Width="368">
+    <Machines:V01_BBF_SingleBag Canvas.Left="10" Canvas.Top="10" Height="320" Width="343" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="873-62-BAG" SignalName="LSH" Canvas.Left="116" Canvas.Top="62"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
+		VerticalAlignment="Center" 
 		ComponentName="873-62-BAG" Canvas.Left="136" Canvas.Top="154"/>
-        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="873-62-BAG" SignalName="SEL" Canvas.Left="148" Canvas.Top="214"/>
-    </Canvas>
+    <Labels:SignalLabel ComponentName="873-62-BAG" SignalName="SEL" Canvas.Top="214" SignalPosition="Top" Canvas.Left="55" HorizontalAlignment="Left" VerticalAlignment="Center" Width="250" />
+  </Canvas>
 </UserControl>
