--- a/Prevu.Synoptics.V3168_Sirplaste/P330.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P330.xaml
@@ -8,7 +8,7 @@
              x:Class="Prevu.Synoptics.P330" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas >
-    <Labels:Pipe Width="141" StatusComponent="292-01-MA1" PipeHeight="Medium" Height="20" RenderTransformOrigin="0.5,0.5" Canvas.Left="96" Canvas.Top="202" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="141" StatusComponent="292-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="97" Canvas.Top="206" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -18,9 +18,9 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="335" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="10" Canvas.Left="339" Canvas.Top="155"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="335" StatusComponent="322-01-MA1" PipeHeight="Medium" Canvas.Left="339" Canvas.Top="155"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="114" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="332-21-CV1" Canvas.Left="498" Canvas.Top="582"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="220" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="18" VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" Canvas.Left="609" Canvas.Top="439">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="220" StatusComponent="324-01-MA1" PipeHeight="Medium" VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" Canvas.Left="609" Canvas.Top="439">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -108,7 +108,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="65" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="1393" Canvas.Top="709"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="138" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" VisibilitySignal="" VisibilityComponent="" Canvas.Left="650" Canvas.Top="221">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="138" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilitySignal="" VisibilityComponent="" Canvas.Left="650" Canvas.Top="228">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -118,8 +118,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="333" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="21" Canvas.Left="855" Canvas.Top="150" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="256" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" Canvas.Left="1051" Canvas.Top="273" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="329" StatusComponent="324-01-MA1" PipeHeight="Medium" Canvas.Left="855" Canvas.Top="155" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="256" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1051" Canvas.Top="278" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -129,7 +129,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="96" StatusComponent="320-01-MA1" PipeHeight="Medium" Height="22" RenderTransformOrigin="0.5,0.5" Canvas.Left="119" Canvas.Top="614" HorizontalAlignment="Left" VerticalAlignment="Center" >
+    <Labels:Pipe Width="96" StatusComponent="320-01-MA1" PipeHeight="Medium"  RenderTransformOrigin="0.5,0.5" Canvas.Left="119" Canvas.Top="614" HorizontalAlignment="Left" VerticalAlignment="Center" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -139,7 +139,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="525" StatusComponent="322-01-MA1" PipeHeight="Medium" Canvas.Left="81" Canvas.Top="412" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
+    <Labels:Pipe Width="523" StatusComponent="322-01-MA1" PipeHeight="Medium" Canvas.Left="82" Canvas.Top="412" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -149,8 +149,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="44" StatusComponent="292-01-MA1" PipeHeight="Medium" Height="20" RenderTransformOrigin="0.5,0.5" Canvas.Left="128" Canvas.Top="134" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="68" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="280" Canvas.Top="664" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Labels:Pipe Width="44" StatusComponent="292-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="128" Canvas.Top="140" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="68" StatusComponent="322-01-MA1" PipeHeight="Medium"  Canvas.Left="280" Canvas.Top="669" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Rectangle HorizontalAlignment="Left" Height="102" Stroke="White" StrokeThickness="2" VerticalAlignment="Center" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="1350" Canvas.Top="96"/>
     <Machines:STR_BatchReactor HorizontalAlignment="Left" VerticalAlignment="Center" Height="300" Width="137" Canvas.Left="594" Canvas.Top="494" ComponentName="330-41-LT1" TrendName="LEVEL"/>
     <Machines:STR_BatchReactor HorizontalAlignment="Left" VerticalAlignment="Center" Height="300" Width="136" Canvas.Left="1053" Canvas.Top="347" TrendName="LEVEL" ComponentName="335-41-LT1"/>
@@ -205,7 +205,7 @@
       </Machines:CV_Valve.RenderTransform>
     </Machines:CV_Valve>
     <Machines:V01_SLX_MixingSiloScrew Canvas.Left="39" Canvas.Top="250" Height="346" Width="258" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="226" Height="18" Canvas.Left="648" Canvas.Top="150" >
+    <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="226" Canvas.Left="648" Canvas.Top="150" >
       <Machines:SCW_ScrewConveyor_straight.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -216,8 +216,8 @@
       </Machines:SCW_ScrewConveyor_straight.RenderTransform>
     </Machines:SCW_ScrewConveyor_straight>
     <Machines:Radar Height="46" Width="52" Canvas.Left="222" Canvas.Top="227" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:SCW_ScrewConveyor_straight Height="22" Width="159" Canvas.Left="154" Canvas.Top="664" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1329" Canvas.Top="553">
+    <Machines:SCW_ScrewConveyor_straight  Width="159" Canvas.Left="154" Canvas.Top="664" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1329" Canvas.Top="563">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="1"/>
