--- a/Prevu.Synoptics.V3085_Anviplas/P430.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P430.xaml
@@ -29,7 +29,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="185" Color="Water" StatusComponent="420-71-ECS1" VisibilityComponent="" Canvas.Left="188" Canvas.Top="177" InverseStatus="True" Icon="Right"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="185" Color="Water" StatusComponent="420-71-ECS1" VisibilityComponent="" Canvas.Left="188" Canvas.Top="177" Icon="Right"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="166" StatusComponent="430-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1158" Canvas.Top="254"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="225" StatusComponent="420-01-MA1" PipeHeight="Medium" Canvas.Left="508" Canvas.Top="264"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="134" RenderTransformOrigin="0.5,0.5" StatusComponent="420-71-ECS1" VisibilityComponent="" Canvas.Left="651" Canvas.Top="184">
